@@ -103,7 +103,6 @@ int settings_defaults( settings_info *settings );
 int settings_copy( settings_info *dest, settings_info *src );
 
 #define SETTINGS_ROM_COUNT 30
-extern const char *settings_rom_name[ SETTINGS_ROM_COUNT ];
 char **settings_get_rom_setting( settings_info *settings, size_t which );
 
 int settings_set_string( char **string_setting, const char *value );
