@@ -113,23 +113,6 @@ static int parse_xml( xmlDocPtr doc, settings_info *settings );
 static int settings_command_line( settings_info *settings, int *first_arg,
 				  int argc, char **argv );
 
-/* The names for each of the ROMs */
-const char *
-settings_rom_name[ SETTINGS_ROM_COUNT ] = { 
-  "16K ROM",
-  "48K ROM", 
-  "128K ROM 0", "128K ROM 1",
-  "+2 ROM 0",   "+2 ROM 1",
-  "+2A ROM 0",  "+2A ROM 1", "+2A ROM 2", "+2A ROM 3",
-  "+3 ROM 0",   "+3 ROM 1",  "+3 ROM 2",  "+3 ROM 3",
-  "2048 ROM 0",
-  "2068 ROM 0", "2068 ROM 1",
-  "P128 ROM 0", "P128 ROM 1", "P128 ROM 2",
-  "S256 ROM 0", "S256 ROM 1", "S256 ROM 2", "S256 ROM 3",
-  "+3e ROM 0",  "+3e ROM 1",  "+3e ROM 2",  "+3e ROM 3",
-  "SE ROM 0",   "SE ROM 1",
-};
-
 /* Called on emulator startup */
 int
 settings_init( int *first_arg, int argc, char **argv )
